--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "html-to-image": "^1.11.11",
     "mongoose": "^8.5.2",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
