--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
-    "react-snap": "^1.23.0"
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7"
   }
 }
